--- a/greeting-service/application-dev.properties
+++ b/greeting-service/application-dev.properties
@@ -1,3 +1,3 @@
 spring.application.name= greeting-service
 greeting-service.greeting="Hello"
-greeting-service.default-value="World"
+greeting-service.default-value="Segovinha"
